# ai-design

./: .gitignore  README.md  env.example  pyproject.toml
Doc/: prorject_requirement.txt  system_design.md
config/: niches.yml
prompt_templates/: food_realistic.txt  nostalgia_retro.txt  pets_cute.txt  pets_funny.txt
src/ai_design/: __init__.py  run_daily.py
src/ai_design/fetchers/: __init__.py
src/ai_design/models/: __init__.py
src/ai_design/templates/: __init__.py
src/ai_design/utils/: __init__.py
