[tool.poetry]
name = "ai-design"
version = "0.1.0"
description = "AI-Driven T-Shirt Design Prompt Generator - Daily service for discovering trending topics and generating Midjourney-ready prompts"
authors = ["AI Design Team"]
readme = "README.md"
packages = [{include = "ai_design", from = "src"}]

[tool.poetry.scripts]
run-daily = "ai_design.run_daily:main"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.18.1"
pytrends = "^4.9.2"
praw = "^7.8.1"
pyyaml = "^6.0.2"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
ruff = "^0.12.1"
black = "^25.1.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "UP"]
ignore = ["E203", "W503"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
